--- a/package.json
+++ b/package.json
@@ -1,11 +1,19 @@
 {
   "name": "hsl-to-hex",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Abhigyani Anand",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com/Abhigyani/hsl-to-hex.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Abhigyani/hsl-to-hex/issues"
+  },
+  "homepage": "https://github.com/Abhigyani/hsl-to-hex#readme",
+  "description": ""
 }
